# dig-clvm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/prompt/: prompt.md  start.md
docs/prompt/tools/: README.md  gitnexus.md  repomix.md  socraticode.md
docs/prompt/tree/: README.md  dt-authoritative-sources.md  dt-git.md  dt-hard-rules.md  dt-paths.md  dt-role.md  dt-tools.md  dt-wf-commit.md  dt-wf-gather-context.md  dt-wf-implement.md  dt-wf-select.md  dt-wf-test.md  dt-wf-update-tracking.md  (+1 more)
docs/requirements/: IMPLEMENTATION_ORDER.md  README.md  REQUIREMENTS_REGISTRY.yaml  SCHEMA.md
docs/resources/: SPEC.md
src/: lib.rs
src/consensus/: block.rs  cache.rs  config.rs  context.rs  error.rs  mod.rs  result.rs  validate.rs
tests/: vv_req_api_001.rs  vv_req_api_002.rs  vv_req_api_003.rs  vv_req_api_004.rs  vv_req_api_005.rs  vv_req_api_006.rs  vv_req_api_007.rs  vv_req_api_008.rs  vv_req_blk_001.rs  vv_req_blk_002.rs  vv_req_blk_003.rs  vv_req_blk_004.rs  vv_req_blk_005.rs  vv_req_blk_006.rs  vv_req_blk_007.rs  vv_req_blk_008.rs  vv_req_blk_009.rs  vv_req_bls_001.rs  vv_req_bls_002.rs  vv_req_bls_003.rs  vv_req_bls_004.rs  vv_req_bls_005.rs  vv_req_con_001.rs  vv_req_con_002.rs  vv_req_con_003.rs  vv_req_con_004.rs  vv_req_con_005.rs  vv_req_con_006.rs  vv_req_con_007.rs  vv_req_par_001.rs  vv_req_par_002.rs  vv_req_par_003.rs  vv_req_par_004.rs  vv_req_par_005.rs  vv_req_par_006.rs  vv_req_par_007.rs  vv_req_par_008.rs  vv_req_par_009.rs  vv_req_par_010.rs  vv_req_par_011.rs  (+15 more)
tests/common/: mod.rs
(+73 files in other folders)
